[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "onecool-os"
version = "0.6.1"
description = "Onecool OS - Personal Asset Operating System"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "onecool-tw" }]
dependencies = ["openpyxl>=3.1", "yfinance>=0.2.40"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
onecool-os = "onecool_os.__main__:main"

[tool.setuptools.packages.find]
include = ["onecool_os*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
